--- a/index.htm
+++ b/index.htm
@@ -9,15 +9,16 @@
 <meta name="Microsoft Theme" content="network 011, default">
 </head>
 
-<body background="_themes/network/netbkgnd.gif" bgcolor="#FFFFFF" text="#000000" link="#0066CC" vlink="#999999" alink="#669999"><!--mstheme--><font face="trebuchet ms, Arial, Helvetica">
+<body>
 
 <p><font size="7">Thomas's Website</font></p>
 <p>Hello, I am Thomas, also known as sunflowerthomas!</p>
 <p>I make games such as:</p>
-<!--mstheme--></font><!--msthemelist--><table border="0" cellpadding="0" cellspacing="0" width="100%">
-  <!--msthemelist--><tr><td valign="baseline" width="42"><img src="_themes/network/anetbul1.gif" width="12" height="12" hspace="15" alt="bullet"></td><td valign="top" width="100%"><!--mstheme--><font face="trebuchet ms, Arial, Helvetica">
+<ul><!--mstheme--></font><!--msthemelist--><table border="0" cellpadding="0" cellspacing="0" width="100%">
+  <!--msthemelist--><tr><td valign="baseline" width="42"><li><td valign="top" width="100%"><!--mstheme--><font face="trebuchet ms, Arial, Helvetica">
   <a href="https://www.meta.com/en-gb/experiences/5169968153104859/?require_login=true&utm_source=developer.oculus.com&utm_medium=oculusredirect">
-  Monke Tag (Gorilla Tag knock off)</a><!--mstheme--></font><!--msthemelist--></td></tr>
+  Monke Tag (Gorilla Tag knock off)</a><!--mstheme--></font><!--msthemelist--></td></li></tr>
+</ul>
 <!--msthemelist--></table><!--mstheme--><font face="trebuchet ms, Arial, Helvetica">
 <p>If you want to read our privacy policy,
 <a href="https://sunflowerthomas.github.io/privacy_policy">click here</a>.</p>
