--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -18,7 +18,7 @@
 <p><strong>Affiliate</strong> means an entity that controls, is controlled by or is under common control with a party, where "control" means ownership of 50% or more of the shares, equity interest or other securities entitled to vote for election of directors or other managing authority.</p>
 </li>
 <li>
-<p><strong>Application</strong> refers to Monke Tag, the software program provided by the Company.</p>
+<p><strong>Application</strong> refers to computer software provided by the Company.</p>
 </li>
 <li>
 <p><strong>Company</strong> (referred to as either "the Company", "We", "Us" or "Our" in this Agreement) refers to Monke Tag.</p>
