--- a/index.htm
+++ b/index.htm
@@ -12,6 +12,9 @@
 <body>
 
 <p><font size="7">Thomas's Website</font></p>
+  <script async src="https://cse.google.com/cse.js?cx=74e3a9b78a60f48e4">
+</script>
+<div class="gcse-search"></div>
 <p>Hello, I am Thomas, also known as sunflowerthomas!</p>
 <p>I make games such as:</p>
 <ul><!--mstheme--></font><!--msthemelist--><table border="0" cellpadding="0" cellspacing="0" width="100%">
