Added GIYR reference

--- a/index.htm
+++ b/index.htm
@@ -19,8 +19,9 @@
 <p>I make games such as:</p>
 <ul><!--mstheme--></font><!--msthemelist--><table border="0" cellpadding="0" cellspacing="0" width="100%">
   <!--msthemelist--><tr><td valign="baseline" width="42"><li><td valign="top" width="100%"><!--mstheme--><font face="trebuchet ms, Arial, Helvetica">
-  <a href="https://www.meta.com/en-gb/experiences/5169968153104859/?require_login=true&utm_source=developer.oculus.com&utm_medium=oculusredirect">
-  Monke Tag (Gorilla Tag knock off)</a><!--mstheme--></font><!--msthemelist--></td></li></tr>
+  <a href="https://www.meta.com/en-gb/experiences/5169968153104859/">
+  Monke Tag (Gorilla Tag knock off)</a>
+  <p>Guns in Your Room</p><!--mstheme--></font><!--msthemelist--></td></li></tr>
 </ul>
 <!--msthemelist--></table><!--mstheme--><font face="trebuchet ms, Arial, Helvetica">
 <p>If you want to read our privacy policy,
