--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -1,8 +1,8 @@
 <html>
     <head><title>Privacy Policy</title></head>
     <body>
-        <h1>Privacy Policy</h1>
-<p>Last updated: July 21, 2024</p>
+        <div id="title"><h1>Privacy Policy</h1></div>
+<div id="content"><p>Last updated: July 21, 2024</p>
 <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
 <p>We use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy. This Privacy Policy has been created with the help of the <a href="https://www.freeprivacypolicy.com/free-privacy-policy-generator/" target="_blank">Free Privacy Policy Generator</a>.</p>
 <h2>Interpretation and Definitions</h2>
@@ -146,6 +146,6 @@
 <p>If you have any questions about this Privacy Policy, You can contact us:</p>
 <ul>
 <li>By email: t.man.sunflower@gmail.com</li>
-</ul>
+</ul></div>
     </body>
 </html>
