Added margins and padding.

--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -1,5 +1,8 @@
 <html>
-    <head><title>Privacy Policy</title></head>
+    <head>
+        <title>Privacy Policy</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
     <body>
         <div id="title"><h1>Privacy Policy</h1></div>
 <div id="content"><p>Last updated: July 21, 2024</p>
