--- a/privacy_policy_giyr.html
+++ b/privacy_policy_giyr.html
@@ -1,5 +1,8 @@
 <html>
-    <head><title>Privacy Policy for Guns In Your Room</title></head>
+    <head>
+        <title>Privacy Policy for Guns In Your Room</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
     <body>
         <div id="title"><h1>Guns In Your Room - Privacy Policy</h1></div>
         <div id="content"><p>We do not store any data about you or your account, as it is sent directly to Meta's servers and cannot be viewed by us.</p></div>
