Added projects section and calculator.

--- a/index.htm
+++ b/index.htm
@@ -16,6 +16,12 @@
       <p>Guns In Your Room (MR Shooting game) - Coming Soon</p>
     </ul>
   </div>
+  <div id="content">
+    <h3>Here are some projects that I'm working on</h3>
+    <ul>
+      <a href="https://sunflowerthomas.github.io/Calculator/">Calculator</a>
+    </ul>
+  </div>
   <div id="footer">
     <p>If you want to read our privacy policy,
       <a href="https://sunflowerthomas.github.io/privacy_policy">click here</a>.</p>
