ref to new site

--- a/index.htm
+++ b/index.htm
@@ -22,6 +22,13 @@
       <a href="https://sunflowerthomas.github.io/Calculator/">Calculator</a>
     </ul>
   </div>
+   <div id="content">
+    <h3>Why not try visiting my new website!</h3>
+    <p>It's still a work in progress.</p>
+    <ul>
+      <a href="https://sunflowerthomas.github.io/new-website/">https://sunflowerthomas.github.io/new-website/</a>
+    </ul>
+  </div>
   <div id="footer">
     <p>If you want to read our privacy policy,
       <a href="https://sunflowerthomas.github.io/privacy_policy">click here</a>.</p>
