--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,6 @@
-<html>
+<!DOCTYPE html>
 
+<html>
 <head>
 <meta http-equiv="Content-Language" content="en-gb">
 <title>Thomas's Website</title>
@@ -12,8 +13,8 @@
   <div id="content">
     <h3>I make these games</h3>
     <ul>
-      <p>Monke Tag (Gorilla Tag knockoff) - Coming Never</p>
-      <p>Guns In Your Room (MR Shooting game) - Coming Soon</p>
+      <p><li>Monke Tag (Gorilla Tag knockoff) - Coming Never</li></p>
+      <p><li>Guns In Your Room (MR Shooting game) - Coming Soon</li></p>
     </ul>
   </div>
   <div id="content">
@@ -26,7 +27,7 @@
     <h3>Why not try visiting my new website!</h3>
     <p>It's still a work in progress.</p>
     <ul>
-      <a href="https://sunflowerthomas.github.io/new-website/">https://sunflowerthomas.github.io/new-website/</a>
+      <a href="https://sunflowerthomas.github.io/new-website/">New website</a>
     </ul>
   </div>
   <div id="footer">
