--- a/index.htm
+++ b/index.htm
@@ -2,6 +2,15 @@
 
 <html>
 <head>
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-47HM6TTQXH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-47HM6TTQXH');
+</script> 
 <meta http-equiv="Content-Language" content="en-gb">
 <title>Thomas's Website</title>
 <link rel="stylesheet" href="style.css">
