added consent form

--- a/index.htm
+++ b/index.htm
@@ -2,6 +2,7 @@
 
 <html>
 <head>
+<script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="575d2bc3-f16b-463c-ba38-45e8ab2b5edf" type="text/javascript" async></script>
  <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-47HM6TTQXH"></script>
 <script>
