Added redesign notice.

--- a/index.htm
+++ b/index.htm
@@ -8,6 +8,10 @@
 </head>
 <body>
   <div id="title">
+    <h1>This website is currently being redesigned</h1><br>
+    <p>You will soon be able to access the new website on</p><a href="https://www.sunflowerthomas.xyz">www.sunflowerthomas.xyz</a><p>.</p>
+  </div>
+  <div id="title">
     <h1>Welcome to Thomas's Website!</h1>
   </div>
   <div id="content">
