--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,8 @@
 <body>
   <div id="title">
     <h1>This website is currently being redesigned</h1><br>
-    <p>You will soon be able to access the new website on</p><a href="https://www.sunflowerthomas.xyz">www.sunflowerthomas.xyz</a><p>.</p>
+    <p>You will soon be able to access the new website on</p><a href="https://www.sunflowerthomas.xyz">www.sunflowerthomas.xyz</a><p>.</p><br>
+    <p>This page will redirect to the new website when the redesign is done.</p>
   </div>
   <div id="title">
     <h1>Welcome to Thomas's Website!</h1>
